[bdist_wheel]
universal = 1

[metadata]
description = Fortran 90 namelist parser
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Marshall Ward
author_email = f90nml@marshallward.org
url = https://github.com/marshallward/f90nml
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities

[options]
packages = find:

[options.extras_require]
yaml = PyYAML

[options.entry_points]
console_scripts =
    f90nml = f90nml.cli:parse
